--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">yadro-phone-app</string>
     <string name="try_later">Something went wrong. \nTry again later.</string>
+    <string name="needed_permissions">Needed permissions. \nProvide it in settings.</string>
+    <string name="go_to_settings">Go to settings</string>
 </resources>
